add fonts and images and header

--- a/index.html
+++ b/index.html
@@ -4,10 +4,41 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- link -->
+  <link rel="stylesheet" href="./css/main.css">
   <title>Nick Hallden</title>
 </head>
 <body>
+
+  <header class="site-header">
+    <div class="container">
+      <div class="site-header__inner">
+        <a href="./index.html">
+          <img src="./images/logo.svg" alt="Site Logo" width="178" height="37">
+        </a>
+        <nav class="navbar">
+          <ul class="navbar__list">
+            <li class="navbar__item">
+              <a class="navbar__link navbar__link--active" href="#link">Product</a>
+            </li>
+            <li class="navbar__item">
+              <a class="navbar__link" href="#link">Customers</a>
+            </li>
+            <li class="navbar__item">
+              <a class="navbar__link" href="#link">Pricing</a>
+            </li>
+            <li class="navbar__item">
+              <a class="navbar__link" href="#link">Resources</a>
+            </li>
+          </ul>
+        </nav>
+        <a class="site-header__link" href="#link">Sign In</a>
+        <a class="site-header__linkk" href="#link">Sign Up</a>
+        <button class="site-header__btn">
+          <img src="./images/dark.svg" alt="BTN" width="32" height="32">
+        </button>
+      </div>
+    </div>
+  </header>
   
 </body>
 </html>
