--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Nick Hallden</title>
 </head>
 <body>
-
+  <!---------------------------------------------------- SITE-HEADER ------------------------------------------------------------------------->
   <header class="site-header">
     <div class="container">
       <div class="site-header__inner">
@@ -18,7 +18,7 @@
         <nav class="navbar">
           <ul class="navbar__list">
             <li class="navbar__item">
-              <a class="navbar__link navbar__link--active" href="#link">Product</a>
+              <a class="navbar__link navbar__link--active" href="./index.html">Product</a>
             </li>
             <li class="navbar__item">
               <a class="navbar__link" href="#link">Customers</a>
@@ -39,6 +39,25 @@
       </div>
     </div>
   </header>
+  <!---------------------------------------------------- SITE-HEADER-END --------------------------------------------------------------------->
+
+  <!---------------------------------------------------- FOOTER-HEADER ----------------------------------------------------------------------->
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-top">
+        <div class="footer-top__wrapper">
+          <h2 class="footer-top__title">
+            Join 100 Compannies who boost their business with <br>
+            Product
+          </h2>
+          <a class="footer-top__link" href="#link">Get This</a>
+        </div>
+        <img src="./images/join.png" alt="Statistic">
+      </div>
+    </div>
+  </footer>
+  <!----------------------------------------------------- FOOTER-END ------------------------------------------------------------------------->
+
   
 </body>
 </html>
