add product section

--- a/customers.html
+++ b/customers.html
@@ -50,5 +50,53 @@
       </div>
     </header>
     <!-----------------------------------header finish--------------------------------->
+
+    <main>
+      <section class="product-section">
+         <div class="container">
+            <div class="product-content">
+               <h2 class="product-title">Why Choose Product?</h2>
+
+               <ul class="product-list">
+                  <li class="product-item">
+                     <div class="product-box">
+                        <h3 class="result-title">Special Business</h3>
+                        <p class="product-text">
+                           Product helps you see how many 
+                           more days you need to work 
+                           to reach your financial goal 
+                           for the month and year.
+                        </p>
+                     </div>
+                  </li>
+
+                  <li class="product-item">
+                     <div class="product-box">
+                        <h3 class="result-title">Instant Result</h3>
+                        <p class="product-text">
+                           Product helps you see how many 
+                           more days you need to work 
+                           to reach your financial goal 
+                           for the month and year.
+                        </p>
+                     </div>
+                  </li>
+
+                  <li class="product-item way-item">
+                     <div class="product-box">
+                        <h3 class="result-title">Fastest way to organize</h3>
+                        <p class="product-text">
+                           Product helps you see how many 
+                           more days you need to work 
+                           to reach your financial goal 
+                           for the month and year.
+                        </p>
+                     </div>
+                  </li>
+               </ul>
+            </div>
+         </div>
+      </section>
+    </main>
 </body>
 </html>
