add work section

--- a/customers.html
+++ b/customers.html
@@ -18,7 +18,7 @@
           <nav class="navbar">
             <ul class="navbar__list">
               <li class="navbar__item">
-                <a class="navbar__link navbar__link--active" href="./index.html">Product</a>
+                <a class="navbar__link navbar__link--active" href="./index.html" target="_blank">Product</a>
               </li>
               <li class="navbar__item">
                 <a class="navbar__link" href="./customers.html">Customers</a>
@@ -52,6 +52,7 @@
     <!-----------------------------------header finish--------------------------------->
 
     <main>
+      <!---------------------------- product section begin------------------------------------- -->
       <section class="product-section">
          <div class="container">
             <div class="product-content">
@@ -97,6 +98,48 @@
             </div>
          </div>
       </section>
+      <!------------------------------ product section finish--------------------------------- -->
+
+      <!-- --------------------------------work section begin------------------------------------- -->
+      <section class="work-section">
+         <div class="container">
+            <div class="work-content">
+               <h2 class="work-title">How Product Work?</h2>
+
+               <ul class="work-list">
+                  <li class="work-item">
+                     <img src="./images/mac1.png" alt="mac img" width="500" height="280">
+                     <div class="work-box">
+                        <strong class="work-str">STEP 1</strong>
+                        <h4 class="for-title">Apply for a product</h4>
+                        <p class="work-text">Completing our easy step-by-step application form gives you access to multiple business with multiple products. We analyse your business through our proprietary credit analysis technology </p>
+                     </div>
+                  </li>
+
+                  <li class="work-item">
+                     <img src="./images/mac2.png" alt="mac img" width="500" height="280">
+                     <div class="work-box">
+                        <strong class="work-str">STEP 2</strong>
+                        <h4 class="for-title">Pay fully refundable</h4>
+                        <p class="work-text">Product will contactting you instantly to receive payment of the Application Fee. if no offer of product is available, your fee will be fully refunded.</p>
+                     </div>
+                  </li>
+
+                  <li class="work-item">
+                     <img src="./images/mac3.png" alt="mac img" width="500" height="280">
+                     <div class="work-box">
+                        <strong class="work-str">STEP 3</strong>
+                        <h4 class="for-title">Completion</h4>
+                        <p class="work-text">Product will continue to liase between borrower and manager to procees and complete a quick and efficient settlement</p>
+                     </div>
+                  </li>
+               </ul>
+
+               <div class="work-link__box"><a class="work-link" href="#">Get in touch with us</a></div>
+            </div>
+         </div>
+      </section>
+      <!--------------------------------- work section finish--------------------------------- -->
     </main>
 </body>
 </html>
