add busines section

--- a/customers.html
+++ b/customers.html
@@ -140,6 +140,44 @@
          </div>
       </section>
       <!--------------------------------- work section finish--------------------------------- -->
+
+      <!----------------------------- busines section begin------------------------------------- -->
+      <section class="busines-section">
+         <div class="container">
+            <div class="busines-content">
+               <div class="busines-box">
+                  <h2 class="busines-title">
+                     Join thousand of other who have
+                     already received offers
+                  </h2>
+               </div>
+
+               <ul class="busines-list">
+                  <li class="busines-item">
+                     <img src="./images/Image Placeholder.svg" alt="img" width="150" height="150">
+                     <h4 class="enter-title">Business</h4>
+                     <p class="busines-text">
+                        Cash Flow <br>
+                        Asset Backed <br>
+                        Receivables Finance
+                     </p>
+                     <p class="enter-text">Find the best business product</p>
+                  </li>
+
+                  <li class="busines-item">
+                     <img src="./images/diaz.svg" alt="img" width="150" height="150">
+                     <h4 class="enter-title">Enterprise</h4>
+                     <p class="busines-text">
+                        Site Acquisition <br>
+                        Bridge  <br>
+                        Development Financing
+                     </p>
+                     <p class="enter-text">Find the best business product</p>
+                  </li>
+               </ul>
+            </div>
+         </div>
+      </section>
     </main>
 </body>
 </html>
