add site footer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <a class="navbar__link navbar__link--active" href="./index.html">Product</a>
             </li>
             <li class="navbar__item">
-              <a class="navbar__link" href="#link">Customers</a>
+              <a class="navbar__link" href="./customers.html" target="_blank">Customers</a>
             </li>
             <li class="navbar__item">
               <a class="navbar__link" href="#link">Pricing</a>
@@ -42,7 +42,7 @@
   <!---------------------------------------------------- SITE-HEADER-END --------------------------------------------------------------------->
   
   <!---------------------------------------------------- FOOTER-HEADER ----------------------------------------------------------------------->
-  <footer class="footer">
+  <footer class="customer-footer">
     <div class="container">
       <div class="footer-top">
         <div class="footer-top__wrapper">
