add black theme

--- a/customers.html
+++ b/customers.html
@@ -24,7 +24,7 @@
                 <a class="navbar__link" href="./customers.html">Customers</a>
               </li>
               <li class="navbar__item">
-                <a class="navbar__link" href="#link">Pricing</a>
+                <a class="navbar__link" href="./pricing.html">Pricing</a>
               </li>
               <li class="navbar__item">
                 <a class="navbar__link" href="#link">Resources</a>
@@ -241,6 +241,6 @@
    </div>
    </footer>
     <!----------------------------------------------------- FOOTER-END ------------------------------------------------------------------------->
- 
+ <script src="./js/main.js"></script>
 </body>
 </html>
