--- a/pricing.html
+++ b/pricing.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Nick Hallden</title>
 		<link rel="stylesheet" href="./css/main.css" />
+		<title>Nick Hallden</title>
 	</head>
 	<body>
 		<!---------------------------------------------------- SITE-HEADER ------------------------------------------------------------------------->
@@ -33,7 +33,7 @@
 								>
 							</li>
 							<li class="navbar__item">
-								<a class="navbar__link" href="./pricing.html">Pricing</a>
+								<a class="navbar__link" href="/pricing.html">Pricing</a>
 							</li>
 							<li class="navbar__item">
 								<a class="navbar__link" href="#link">Resources</a>
@@ -53,7 +53,83 @@
 		<!------------------------------------------------------ MAIN-BEGGIN ----------------------------------------------------------------------->
 		<main>
 			<!------------------------------------------------------ hero-BEGGIN -------------------------------------------------------------------->
+			<section class="my-hero">
+				<div class="container">
+					<div class="my-hero__inner">
+						<h1 class="visually-hidden">Welcome page Nick Hallden</h1>
+						<h2 class="my-hero__title">PRICING</h2>
+						<strong class="my-hero__textblade"
+							>Let’s get some real work done here.</strong
+						>
+						<p class="my-hero__text">
+							Prodict is your perfect solution for working. Get started now for
+							free
+						</p>
+						<ol class="my-hero__list">
+							<li class="my-hero__item">
+								<h3 class="my-hero__subtitle">Free</h3>
+								<p class="my-hero__subtext">Brief price description</p>
+								<ins class="my-hero__price"
+									>0<span class="my-hero__subprice">$</span
+									><span class="my-hero__subptext">Per / month</span></ins
+								>
+								<ol class="my-hero__sublist">
+									<li class="my-hero__subitem">Only 2 Operators</li>
+									<li class="my-hero__subitem">Notifications</li>
+									<li class="my-hero__subitem">Landing Pages</li>
+								</ol>
+								<a class="my-hero__link" href="#link">Order Now</a>
+							</li>
 
+							<li class="my-hero__item">
+								<h3 class="my-hero__subtitle my-hero__subtitle--active">
+									Standard
+								</h3>
+								<p class="my-hero__subtext my-hero__subtext--active">
+									Brief price description
+								</p>
+								<ins class="my-hero__price my-hero__price--active"
+									>5<span class="my-hero__subprice my-hero__subprice-active"
+										>$</span
+									><span class="my-hero__subptext my-hero__subptext--active"
+										>Per / month</span
+									></ins
+								>
+								<ol class="my-hero__sublist">
+									<li class="my-hero__subitem my-hero__subitem--active">
+										5+ Operators
+									</li>
+									<li class="my-hero__subitem my-hero__subitem--active">
+										Notifications
+									</li>
+									<li class="my-hero__subitem my-hero__subitem--active">
+										Landing Pages
+									</li>
+								</ol>
+								<a class="my-hero__link my-hero__link--active" href="#link"
+									>Order Now</a
+								>
+							</li>
+
+							<li class="my-hero__item">
+								<h3 class="my-hero__subtitle">Premium</h3>
+								<p class="my-hero__subtext">Brief price description</p>
+								<ins class="my-hero__price"
+									>10<span class="my-hero__subprice my-hero__subprice--active"
+										>$</span
+									><span class="my-hero__subptext">Per / month</span></ins
+								>
+								<ol class="my-hero__sublist">
+									<li class="my-hero__subitem">Only 3 Operators</li>
+									<li class="my-hero__subitem">Notifications</li>
+									<li class="my-hero__subitem">Landing Pages</li>
+								</ol>
+								<a class="my-hero__link" href="#link">Order Now</a>
+							</li>
+						</ol>
+					</div>
+				</div>
+			</section>
 			<!------------------------------------------------------ hero-end ----------------------------------------------------------------------->
 		</main>
 		<!------------------------------------------------------ MAIN-END -------------------------------------------------------------------------->
