optimize images and add dark mode

--- a/customers.html
+++ b/customers.html
@@ -12,9 +12,16 @@
    <header class="site-header">
       <div class="container">
         <div class="site-header__inner">
-          <a class="logo" href="./index.html">
-            <img src="./images/logo.svg" alt="Site Logo" width="178" height="37">
-          </a>
+         <a class="logo" href="./index.html">
+            <img
+            class="logo__img"
+               src="./images/logo.svg"
+               alt="Site Logo"
+               width="40"
+               height="37"
+            />
+            <strong class="logo__text">Product</strong>
+         </a>
           <nav class="navbar">
             <ul class="navbar__list">
               <li class="navbar__item">
@@ -27,7 +34,7 @@
                 <a class="navbar__link" href="./pricing.html">Pricing</a>
               </li>
               <li class="navbar__item">
-                <a class="navbar__link" href="#link">Resources</a>
+                <a class="navbar__link" href="./resources.html">Resources</a>
               </li>
             </ul>
           </nav>
@@ -41,10 +48,10 @@
         <div class="client-content">
          <h1 class="client-title">Our Clients</h1>
          <div class="client-box">
-            <a class="client-link" href="#"><img src="./images/Airbnb Logo.svg" alt="airbnb logo" width="160" height="50"></a>
-            <a class="client-link" href="#"><img src="./images/Google Logo.svg" alt="google logo" width="146" height="50"></a>
-            <a class="client-link" href="#"><img src="./images/Microsoft Logo.svg" alt="microsoft logo" width="215" height="45"></a>
-            <a class="client-link" href="#"><img src="./images/FedEx Logo.svg" alt="fedex logo" width="140" height="42"></a>
+            <a class="client-link" href="#"><img src="./images/airbnblogo.svg" alt="airbnb logo" width="160" height="50"></a>
+            <a class="client-link" href="#"><img src="./images/googlelogo.svg" alt="google logo" width="146" height="50"></a>
+            <a class="client-link" href="#"><img src="./images/microsoftlogo.svg" alt="microsoft logo" width="215" height="45"></a>
+            <a class="client-link" href="#"><img src="./images/fedexlogo.svg" alt="fedex logo" width="140" height="42"></a>
          </div>
         </div>
       </div>
@@ -154,7 +161,7 @@
 
                <ul class="busines-list">
                   <li class="busines-item">
-                     <img src="./images/Image Placeholder.svg" alt="img" width="150" height="150">
+                     <img src="./images/imageplaceholder.svg" alt="img" width="150" height="150">
                      <h4 class="enter-title">Business</h4>
                      <p class="busines-text">
                         Cash Flow <br>
@@ -197,7 +204,14 @@
        
        <div class="footer-end__one">
          <a class="logo" href="./index.html">
-           <img src="./images/logo.svg" alt="Site Logo" width="178" height="37">
+            <img
+            class="logo__img"
+               src="./images/logo.svg"
+               alt="Site Logo"
+               width="40"
+               height="37"
+            />
+            <strong class="logo__text">Product</strong>
          </a>
          <a class="footer-end__link" href="https://instagram.com">
            <img class="footer-end__img" src="./images/insta.svg" alt="Instagram" width="40" height="40">
