--- a/pricing.html
+++ b/pricing.html
@@ -14,11 +14,13 @@
 				<div class="site-header__inner">
 					<a class="logo" href="./index.html">
 						<img
+						class="logo__img"
 							src="./images/logo.svg"
 							alt="Site Logo"
-							width="178"
+							width="40"
 							height="37"
 						/>
+						<strong class="logo__text">Product</strong>
 					</a>
 					<nav class="navbar">
 						<ul class="navbar__list">
@@ -36,7 +38,7 @@
 								<a class="navbar__link" href="/pricing.html">Pricing</a>
 							</li>
 							<li class="navbar__item">
-								<a class="navbar__link" href="#link">Resources</a>
+								<a class="navbar__link" href="./resources.html">Resources</a>
 							</li>
 						</ul>
 					</nav>
@@ -52,7 +54,7 @@
 
 		<!------------------------------------------------------ MAIN-BEGGIN ----------------------------------------------------------------------->
 		<main>
-			<!------------------------------------------------------ hero-BEGGIN -------------------------------------------------------------------->
+			<!------------------------------------------------------ hero-BEGGIN ------------------------------------------------------------------->
 			<section class="my-hero">
 				<div class="container">
 					<div class="my-hero__inner">
@@ -130,7 +132,157 @@
 					</div>
 				</div>
 			</section>
-			<!------------------------------------------------------ hero-end ----------------------------------------------------------------------->
+			<!------------------------------------------------------ hero-end ---------------------------------------------------------------------->
+			<!------------------------------------------------------ enterprice-BEGGIN ------------------------------------------------------------->
+			<section class="enterprice">
+				<div class="container">
+					<div class="enterprice__inner">
+						<h2 class="enterprice__title">ENTERPRISE</h2>
+						<strong class="enterprice__str"
+							>Are you interested in a custom-tailored plan?</strong
+						>
+						<p class="enterprice__text">
+							Product is a set of advanced features for really large teams with
+							projects.
+						</p>
+						<a class="enterprice__link" href="#link">Get in touch with us</a>
+					</div>
+				</div>
+			</section>
+			<!------------------------------------------------------ enterprice-end ---------------------------------------------------------------->
+			<!------------------------------------------------------ product-BEGGIN ---------------------------------------------------------------->
+			<section class="effect">
+				<div class="container">
+					<div class="effect__inner">
+						<h2 class="effect__title">
+							Product is being used with great effects alongside:
+						</h2>
+						<div class="effect__wrapper">
+							<img
+								class="effect__img"
+								src="./images/amico.png"
+								alt="Amico"
+								width="528"
+								height="393"
+							/>
+							<div class="effect__content">
+								<img
+									class="effect__bottom__img"
+									src="./images/enterpreneur.svg"
+									alt=""
+									width="50"
+									height="50"
+								/>
+								<h3 class="effect__bottom__title">Enterpreneur</h3>
+								<div class="effect__content__wrapper">
+									<p class="effect__bottom__text">
+										Product is a great way to help medium and samall enterprise
+										owners achieve their goals
+									</p>
+								</div>
+								<img
+									class="effect__bottom__img"
+									src="./images/accountas.svg"
+									alt=""
+									width="50"
+									height="50"
+								/>
+								<h3 class="effect__bottom__title">Accountants</h3>
+								<div class="effect__content__wrapper">
+									<p class="effect__bottom__text">
+										Whether you are working on contract with clients, or on
+										other key accounting documents, Product is for you
+									</p>
+								</div>
+								<img
+									class="effect__bottom__img"
+									src="./images/universities.svg"
+									alt=""
+									width="50"
+									height="50"
+								/>
+								<h3 class="effect__bottom__title">Universities</h3>
+								<div class="effect__content__wrapper">
+									<p class="effect__bottom__text effect__bottom__text--active">
+										Organize university projects and have documents easily
+										graded online with Product
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!------------------------------------------------------ product-end ------------------------------------------------------------------->
+			<!------------------------------------------------------ enterprice-BEGGIN ------------------------------------------------------------->
+			<section class="asked">
+				<div class="container">
+					<div class="asked__inner">
+						<h2 class="asked__title">Frequently asked question</h2>
+						<p class="asked__text">
+							Something is not clear? You need help? Check our FAQ section
+						</p>
+						<div class="asked__content">
+							<details class="asked__details">
+								<summary class="asked__summary">
+									<img
+										class="asked__img"
+										src="./images/plus_circle.svg"
+										alt="plus"
+										width="24"
+										height="24"
+									/>
+									What are my payment option?
+								</summary>
+							</details>
+							<details class="asked__details" open>
+								<summary class="asked__summary">
+									<img
+										class="asked__img"
+										src="./images/minus_circle.svg"
+										alt="minus"
+										width="24"
+										height="24"
+									/>
+									How can I invite collaborator to platform?
+								</summary>
+								<p class="asked__bottom__text">
+									After creating your account you will have an oppurtunity to
+									create your first project that will be associated withthe
+									collaborators e-mail. An invitation will be sent
+									automatically. Then, invited user will have to confirm his
+									account by e-mail and finish userd onboarding.
+								</p>
+							</details>
+							<details class="asked__details">
+								<summary class="asked__summary">
+									<img
+										class="asked__img"
+										src="./images/plus_circle.svg"
+										alt="plus"
+										width="24"
+										height="24"
+									/>
+									Can I upgrade my plan?
+								</summary>
+							</details>
+							<details class="asked__details">
+								<summary class="asked__summary">
+									<img
+										class="asked__img"
+										src="./images/plus_circle.svg"
+										alt="plus"
+										width="24"
+										height="24"
+									/>
+									Can I cancel my plan at anytime?
+								</summary>
+							</details>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!------------------------------------------------------ enterprice-end ---------------------------------------------------------------->
 		</main>
 		<!------------------------------------------------------ MAIN-END -------------------------------------------------------------------------->
 
@@ -151,11 +303,13 @@
 					<div class="footer-end__one">
 						<a class="logo" href="./index.html">
 							<img
+							class="logo__img"
 								src="./images/logo.svg"
 								alt="Site Logo"
-								width="178"
+								width="40"
 								height="37"
 							/>
+							<strong class="logo__text">Product</strong>
 						</a>
 						<a class="footer-end__link" href="https://instagram.com">
 							<img
