--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Nick Hallden</title>
 		<!-- <link rel="stylesheet" href="./css/main.css" /> -->
-		<link rel="stylesheet" href="./css/main.css.map">
+		<link rel="stylesheet" href="./css/minify.css">
 	</head>
 	<body>
 		<!---------------------------------------------------- SITE-HEADER ------------------------------------------------------------------------->
