--- a/customers.html
+++ b/customers.html
@@ -98,6 +98,7 @@
             </div>
          </div>
       </section>
+
       <!------------------------------ product section finish--------------------------------- -->
 
       <!-- --------------------------------work section begin------------------------------------- -->
@@ -178,6 +179,7 @@
             </div>
          </div>
       </section>
+      <!-------------------------------- businies section finish--------------------------------- -->
     </main>
 
     <!---------------------------------------------------- FOOTER-HEADER ----------------------------------------------------------------------->
